--- a/index.html
+++ b/index.html
@@ -1098,10 +1098,10 @@
 
                     <div class="profile-socials">
     <div class="profile-socials">
-    <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-    <a href="https://instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/thilina-sandamal-kavirathne/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+    <a href="https://instagram.com/thilina_zand" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://facebook.com/yourusername" target="_blank"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://github.com/thilinakavirathne" target="_blank"><i class="fab fa-github"></i></a>
 </div>
 
 </div>
